# go-web-app

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  atai.bzl  deps.bzl  go.mod
api-app/: BUILD.bazel  cert.pem  key.pem  main.go  main_test.go
api-app/certs/: BUILD.bazel
api-app/types/: BUILD.bazel  types.go
infra/certs/: ca-certificates.crt
infra/config/: envoy-config.yaml  envoy-config.yaml.backup.v1  envoy-config.yaml.backup.v2  envoy-config.yaml.work.v1
infra/dockerfiles/: Dockerfile.envoy
infra/scripts/: init_network.sh
